// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component Should match the snapshot of a progressbar with title and subtitle 1`] = `
.c3 {
  border-radius: 8px;
  margin-top: 8px;
  overflow: hidden;
  position: relative;
  background-color: rgba(19,85,208,0.39);
  height: 8px;
  width: 250px;
}

.c4 {
  border-radius: 8px;
  display: inline-block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.4s linear;
  transition: width 0.4s linear;
  background-color: #1355d0;
  width: 0%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0.18px;
  -moz-letter-spacing: 0.18px;
  -ms-letter-spacing: 0.18px;
  letter-spacing: 0.18px;
  line-height: 1.5;
  color: #4c4c4c;
  font-size: 12px;
}

.c1 {
  font-weight: bold;
  color: #000000;
}

.c2 {
  color: #1355d0;
}

.c5 {
  color: #4c4c4c;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Title
  </span>
  <span
    className="c2"
  >
    This is a subtitle
  </span>
  <div
    className="c3"
    height="8px"
    role="progressbar"
    width="250px"
  >
    <div
      className="c4"
    />
  </div>
  <span
    className="c5"
  >
    0
    %
  </span>
</div>
`;

exports[`ProgressBar component Should match the snapshot of a progressbar with title and subtitle and value 1`] = `
.c3 {
  border-radius: 8px;
  margin-top: 8px;
  overflow: hidden;
  position: relative;
  background-color: rgba(19,85,208,0.39);
  height: 8px;
  width: 250px;
}

.c4 {
  border-radius: 8px;
  display: inline-block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.4s linear;
  transition: width 0.4s linear;
  background-color: #1355d0;
  width: 30%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0.18px;
  -moz-letter-spacing: 0.18px;
  -ms-letter-spacing: 0.18px;
  letter-spacing: 0.18px;
  line-height: 1.5;
  color: #4c4c4c;
  font-size: 12px;
}

.c1 {
  font-weight: bold;
  color: #000000;
}

.c2 {
  color: #1355d0;
}

.c5 {
  color: #4c4c4c;
}

<div
  className="c0"
>
  <span
    className="c1"
  >
    Title
  </span>
  <span
    className="c2"
  >
    This is a subtitle
  </span>
  <div
    className="c3"
    height="8px"
    role="progressbar"
    width="250px"
  >
    <div
      className="c4"
    />
  </div>
  <span
    className="c5"
  >
    30
     percent to finish
  </span>
</div>
`;

exports[`ProgressBar component Should match the snapshot of a simple progress bar 1`] = `
.c1 {
  border-radius: 8px;
  margin-top: 8px;
  overflow: hidden;
  position: relative;
  background-color: rgba(19,85,208,0.39);
  height: 8px;
  width: 250px;
}

.c2 {
  border-radius: 8px;
  display: inline-block;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  -webkit-transition: width 0.4s linear;
  transition: width 0.4s linear;
  background-color: #1355d0;
  width: 0%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: 0.18px;
  -moz-letter-spacing: 0.18px;
  -ms-letter-spacing: 0.18px;
  letter-spacing: 0.18px;
  line-height: 1.5;
  color: #4c4c4c;
  font-size: 12px;
}

.c3 {
  color: #4c4c4c;
}

<div
  className="c0"
>
  <div
    className="c1"
    height="8px"
    role="progressbar"
    width="250px"
  >
    <div
      className="c2"
    />
  </div>
  <span
    className="c3"
  >
    0
    %
  </span>
</div>
`;
